--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,45 +1,17 @@
+// This shows a simple build wrapper example, using the Timestamper plugin.
 node {
-   def mvnHome
-   stage('Prepare') {
-      git url: 'git@github.com:nandudemy/devops.git', branch: 'develop'
-      mvnHome = tool 'maven'
-   }
-   stage('Build') {
-      if (isUnix()) {
-         sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean package"
-      } else {
-         bat(/"${mvnHome}\bin\mvn" -Dmaven.test.failure.ignore clean package/)
-      }
-   }
-   stage('Unit Test') {
-      junit '**/target/surefire-reports/TEST-*.xml'
-      archive 'target/*.jar'
-   }
-   stage('Integration Test') {
-     if (isUnix()) {
-        sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean verify"
-     } else {
-        bat(/"${mvnHome}\bin\mvn" -Dmaven.test.failure.ignore clean verify/)
-     }
-  }
-   stage('Sonar') {
-      if (isUnix()) {
-         sh "'${mvnHome}/bin/mvn' sonar:sonar"
-      } else {
-         bat(/"${mvnHome}\bin\mvn" sonar:sonar/)
-      }
-   }
-   stage('Deploy') {
-       sh 'curl -u jenkins:jenkins -T target/**.war "http://localhost:8080/manager/text/deploy?path=/devops&update=true"'
-   }
-   stage("Smoke Test"){
-       sh "curl --retry-delay 10 --retry 5 http://localhost:8080/devops"
-   }
-   stage('Artifacts') {
-      if (isUnix()) {
-         sh "'${mvnHome}/bin/mvn' -Dmaven.test.failure.ignore clean deploy"
-      } else {
-         bat(/"${mvnHome}\bin\mvn" -Dmaven.test.failure.ignore clean deploy/)
-      }
-   }
+    // Adds timestamps to the output logged by steps inside the wrapper.
+    build with maven {
+        // Just some echoes to show the timestamps.
+        stage "First echo"
+          sh mvn clean compile
+
+        // A sleep to make sure we actually get a real difference!
+        stage "Sleeping"
+         sh mvn test-compile
+
+        // And a final echo to show the time when we wrap up.
+        stage "Second echo"
+        sh mvn package
+    }
 }
